--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <![endif]-->
 </head>
-
+  <div class="Grid">
+    <div class="Grid-cell">
+      <h2>1</h2>
+    </div>
+    <div class="Grid-cell">
+      <h2>2</h2>
+    </div>
+    <div class="Grid-cell">
+      <h2>3</h2>
+    </div>
+    <div class="Grid-cell">
+      <h2>4</h2>
+    </div>
 <body>
-  
+
 </body>
 </html>
